# kube-ops-view

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Gopkg.toml  MANIFEST.in  Makefile  Pipfile  README.rst  app.py  main.go  pipenv-install.py  pyproject.toml  requirements.txt  setup.py  swagger.yaml  tox.ini
app/: .eslintrc.yml  README.rst  package-lock.json  package.json  webpack.config.js
app/src/: app.js  bars.js  cluster.js  colors.js  config.js  filters.js  node.js  pod.js  selectbox.js  themes.js  tooltip.js  utils.js
deploy/: auth.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  redis-deployment.yaml  redis-service.yaml  service.yaml
docs/: Makefile  access-control.rst  conf.py  getting-started.rst  index.rst  multiple-clusters.rst  ui-options.rst  user-guide.rst
examples/: unassigned-pod.yaml
kube_ops_view/: __init__.py  backoff.py  cluster_discovery.py  kubernetes.py  main.py  mock.py  oauth.py  stores.py  update.py  utils.py
kube_ops_view/templates/: clusters.html  index.html  screen-tokens.html
static/: .eslintrc.yml  app.js  index.html  pixi.min.js  pixi.min.js.map
templates/: index.html
tests/: test_mock.py
